--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -246,6 +246,10 @@
     align-items: center;
     justify-content: space-between;
 }
+.lp-import-file-inner input {
+    width: 180px;
+    margin-right: 30px;
+}
 
 .import-export-btn{
     text-decoration: none;
@@ -572,26 +576,24 @@
 
 /* modal success */
 .lp-error-modal {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    display: none;
-    z-index: 999999;
+    
 }
 .lp-success-modal {
-    width: 730px;
-    height: 500px;
     position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     display: none;
     z-index: 999999;
+    background: rgba(0,0,0, 0.3);
+    width: 100%;
+    height: 100%;
 }
 .lp-error-modal.active,
 .lp-success-modal.active {
-    display: block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .lp-modal-alert {
     background-color: #fff;
@@ -696,6 +698,8 @@
 .lp-modal-icon.lp-modal-success.animate:after {
     animation: rotatePlaceholder 4.25s ease-in;
 }
+
+
 @keyframes animateSuccessTip {
     0%,54% {
         width: 0;
@@ -746,87 +750,123 @@
     }
 }
 
-/* // Extra large devices (large desktops, 1200px and up) */
-@media (max-width: 1180px) {
-    .lp-container {
-        width: 100%;
-        margin: 0 auto;
-    }
-}
 
-/* // Large devices (desktops, 992px and up) */
-@media (max-width: 992px) {
+
+ /* // Extra large devices (large desktops, 1200px and up) */
+ @media (max-width: 1180px) { 
     .lp-container {
         width: 100%;
         margin: 0 auto;
     }
-    .lp-grid {
+    .tools-migration-lp-page .lp-grid {
         display: grid;
-        grid-template-columns: repeat(1, 1fr);
+        grid-template-columns: 1fr;
+    }
+    .lp-migratoin-right {
+        display: none;
+    }
+  }
+  
+  /* // Large devices (desktops, 992px and up) */
+  @media (max-width: 992px) { 
+    .lp-container {
+      width: 100%;
+      margin: 0 auto;
+    }
+    .tools-migration-lp-page .lp-grid {
+        display: grid;
+        grid-template-columns: 1fr;
+    }
+    .lp-migratoin-right {
+        display: none;
+    }
+
+    #lp-import-export-area .lp-grid {
+        grid-template-columns: 1fr;
+    }
+    .lp-import-file-inner {
+        justify-content: flex-start;
+    }
+    .lp-export {
+        margin-top: 30px;
     }
     .lp {
         background-color: #fff;
         padding: 39px 15px 60px 15px;
     }
+    .lp-success-modal,
+    .lp-error-modal{
+        width: 100%;
+    }
+    .lp-success-modal .lp-modal-alert,
+    .lp-error-modal .lp-modal-alert{
+        width: 58%;
+        height: 280px;
+        margin: 0 auto;
+    }
     .lp-migration-btn-group > span {
-        display: inline-block;
+    display: inline-block;
     }
     .lp-migration-heading > p {
         font-size: 16px;
         line-height: 28px;
         color: #606265;
-        padding: 0px 0px 0px 0px;
+        padding: 0px 195px 0px 0px;
         margin-top: 9px;
     }
     .lp-export:not(:first-child) {
-        margin-top: 60px;
+    margin-top: 60px;
     }
     #lp-import-export-area .lp-grid {
         display: grid;
         grid-template-columns: repeat(1,1fr);
         grid-column-gap: 0%;
     }
-
-
     .lp-migration-btn-group > span {
         display: inline-block;
     }
-
+    
     .lp-migration-btn-group {
         margin-top: 40px;
     }
-
+  
 }
+  
+  /* // Medium devices (tablets, 768px and up) */
+  @media (max-width: 768px) { 
 
-/* // Medium devices (tablets, 768px and up) */
-@media (max-width: 768px) {
     .lp-migratoin-right {
-        display: none;
+      display: none;
     }
     .lp-success-modal,
     .lp-error-modal{
-        width: 95%;
+        width: 100%;
     }
     .lp-success-modal .lp-modal-alert,
     .lp-error-modal .lp-modal-alert{
-        width: 95%;
-        height: 450px;
+        width: 70%;
+        height: 280px;
         margin: 0 auto;
     }
     .lp-modal-alert {
-        background-color: white;
-        box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.2);
-        border-radius: 4px;
-        margin: 0px;
-        padding: 47px 52px 76px 52px;
-        text-align: center;
-        position: relative;
+      background-color: white;
+      box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.2);
+      border-radius: 4px;
+      margin: 0px;
+      padding: 47px 52px 76px 52px;
+      text-align: center;
+      position: relative;
     }
     .lp-migration-modal {
         width: 95%;
         box-shadow: 2px 30px 13px 9px rgba(0, 0, 0, 0.2);
     }
 
+    .tools-migration-lp-page .lp {
+        background-color: #fff;
+        padding: 42px 0px 60px 29px;
+    }
+    
     .lp-migration-alert {
         display: grid;
         grid-template-columns: 1fr;
@@ -845,13 +885,19 @@
     .lp-migration-modal-icon img {
         width: 50px;
     }
+    .migration-modal-btn-group {
+        text-align: center;
+    }
     .migration-modal-btn-group p {
         font-size: 14px;
         line-height: 20px;
         letter-spacing: -0.4px;
         color: #1F2949;
         margin-bottom: 15px;
-        margin-right: 130px;
+        margin-right: 0px;  
+    }
+    .lp-migration-modal .lp-migration-modal-icon {
+        text-align: center;
     }
     .migration-try-btn {
         padding: 7px 25px 7px 25px;
@@ -869,7 +915,7 @@
         font-weight: 600;
         text-align: center;
     }
-
+    
     .migration-modal-btn-group .migration-start-btn {
         color: #fff;
         background: #3057D5;
@@ -881,56 +927,55 @@
         margin-left: 8px;
         border: 1px solid #3057D5;
     }
-
-
-
+  
 }
-/* // Medium devices (mobile, 768px and up) */
-@media (max-width: 576px) {
+  /* // Medium devices (mobile, 768px and up) */ 
+  @media (max-width: 576px) { 
     .lp-grid {
-        display: grid;
-        grid-template-columns: 100%;
+      display: grid;
+      grid-template-columns: 100%;
     }
     .lp {
-        background-color: #fff;
-        padding: 39px 15px 60px 15px;
+      background-color: #fff;
+      padding: 39px 15px 60px 15px;
     }
     .lp-migratoin-right {
-        display: none;
+      display: none;
     }
     .lp-migration-singlebox-desc {
-        margin: 0px 0px 0px 10px;
+      margin: 0px 0px 0px 10px;
     }
     .lp-migration-heading > h3 {
-        font-size: 25px;
-        line-height: 52px;
-        font-weight: normal;
-        color: #1F2949;
+      font-size: 25px;
+      line-height: 52px;
+      font-weight: normal;
+      color: #1F2949;
     }
     .lp-migration-heading > p {
         font-size: 14px;
         line-height: 22px;
         color: #606265;
-        padding: 0px 0px 0px 0px;
+        padding: 0px 90px 0px 0px;
         margin-top: 0px;
     }
     .lp-migration-btn-group button {
-        text-decoration: none;
-        padding: 8px 25px 8px 25px;
-        border-radius: 2px;
-        background-color: #3057D5;
-        color: #fff;
-        font-size: 12px;
-        line-height: 19px;
-        cursor: pointer;
-        font-weight: 600;
-        border: 0;
+      text-decoration: none;
+      padding: 8px 25px 8px 25px;
+      border-radius: 2px;
+      background-color: #3057D5;
+      color: #fff;
+      font-size: 12px;
+      line-height: 19px;
+      cursor: pointer;
+      font-weight: 600;
+      border: 0;
     }
     .lp-migration-btn-group > span {
         display: block;
         margin:10px 0px 0px 0px;
     }
 
+  
     .lp-import-text p {
         font-size: 14px;
         line-height: 27px;
@@ -941,14 +986,14 @@
         background: #fff;
         padding: 48px 15px 46px 15px;
     }
-
+  
     .lp-import-file-inner {
         display: flex;
         align-items: flex-start;
         justify-content: space-between;
         flex-direction: column;
     }
-
+    
     .import-export-btn {
         text-decoration: none;
         padding: 8px 25px 8px 25px;
@@ -965,19 +1010,19 @@
         border: 0;
         margin-top: 20px;
     }
-
+    
     .import-export-btn img {
         margin: -4px 10px 0px 0px;
         width: 15px;
     }
-
+    
     .lp-export .import-export-btn {
         background-color: #fff;
         color: #3057D5;
         border: 1px solid #3057D5;
         margin-top: 0px;
     }
-
+    
     #lp-import-export-area {
         margin-top: 30px;
         margin-bottom: 80px;
@@ -985,5 +1030,6 @@
     .lp-export:not(:first-child) {
         margin-top: 30px;
     }
+  
+  }
 
-}
